# elementary-rust-example

./: .gitignore  COPYING  Cargo.toml  README.md  cargo-sources.json  io.github.davidmhewitt.ElementaryRustExample.json  io.github.davidmhewitt.elementary-rust-example.json  meson.build
.github/: dependabot.yml
.github/workflows/: flatpak-modules.yml  flatpak.yml  main.yml  rust.yml
data/: io.github.davidmhewitt.ElementaryRustExample.appdata.xml.in  io.github.davidmhewitt.ElementaryRustExample.desktop.in  launcher.desktop.in.in  meson.build  metadata.appdata.xml.in.in  settings.gschema.xml  settings.gschema.xml.in
data/icons/: meson.build
po/: LINGUAS  elementary-rust-example.pot  en_GB.po  io.github.davidmhewitt.ElementaryRustExample.pot  ja.po  meson.build
po/extra/: POTFILES  en_GB.po  extra.pot  ja.po
src/: application.rs  config.rs.in  elementary-rust-example.gresource.xml  headerbar.rs  main.rs  meson.build  resources.gresource.xml.in  welcome.rs  window.rs
